# nbread

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
nbread/: __init__.py
